--- a/backend/src/views/user.pug
+++ b/backend/src/views/user.pug
@@ -1,11 +1,14 @@
 extends layout
 
 block content
-  h1 #{user.name} (#{user.age})
-  p Bio: #{user.bio}
-  h2 Photos (#{user.photos.length})
+  h1 #{user.firstName} (#{user.lastName})
+  p Age: #{user.age}
+  if user.teams.length == 0 (#{user.photos.length})
+    p no team membership yet!
+  else
+    p #{user.teams.map(team => team.name).join(', ')}
 
-  each photo in user.photos
+  //each photo in user.photos
     h3 #{photo.filename}
     if photo.likedBy.length == 0
       p no likes yet!
