--- a/backend/src/views/index.pug
+++ b/backend/src/views/index.pug
@@ -8,6 +8,6 @@ block content
       h1= title
       p Welcome to #{title}
       #promo
-        .promo-title It is an amazing course! Wanna sign up?
+        .promo-title It is an amazing app to make world beautiful!
         button.answer.answer-yes Yes!
         button.answer.answer-no No?
